--- a/index.html
+++ b/index.html
@@ -99,19 +99,25 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        Motivated Computer Science and Engineering (CSE) student specializing in Data Science, with
-                        hands-on internship experience at AISPRY. Over 4 years in quality assurance, production, and
-                        manufacturing at Amara Raja, Kia Motors, and BorgWarner. Skilled in process optimization,
-                        quality control, and machine handling. Passionate about leveraging Data Science and AI for
-                        efficiency and innovation in industrial and real-world applications.
+                        Data Scientist at Young Minds Technology with 1+ years of combined professional experience in
+                        Data Science &amp; AI
+                        (AiSPRY and Young Minds). Also bring 4.5 years of mechanical engineering experience in quality
+                        assurance,
+                        production, and manufacturing at Amara Raja, Kia Motors, and BorgWarner. Skilled in process
+                        optimization,
+                        statistical analysis, model development, and production deployment of ML solutions. Focused on
+                        delivering
+                        scalable ML/DL and generative AI systems and data-driven insights that improve operational
+                        efficiency and
+                        business outcomes.
                     </p>
                     <div class="stats">
                         <div class="stat-item">
-                            <h3>4+</h3>
+                            <h3>6+</h3>
                             <p>Years of Experience</p>
                         </div>
                         <div class="stat-item">
-                            <h3>4+</h3>
+                            <h3>5+</h3>
                             <p>Projects Completed</p>
                         </div>
                     </div>
@@ -199,6 +205,16 @@
                         <span>Nov 2024</span>
                     </div>
                 </a>
+                <a href="https://drive.google.com/file/d/1GlmF9BcYoaHjJlcTmE7u6WEYSFcSS_O8/view?usp=drive_link"
+                    target="_blank" class="certification-card">
+                    <i class="fas fa-graduation-cap"
+                        style="color:#3b82f6;background:#e0f2fe;border-radius:50%;padding:0.4rem;"></i>
+                    <div>
+                        <h4>Diploma in Artificial Intelligence | the State University of New York at Potsdam</h4>
+                        <span>Sep 2025</span>
+                    </div>
+                </a>
+
             </div>
         </div>
     </section>
@@ -289,12 +305,35 @@
         <div class="container">
             <h2 class="section-title">Professional Experience</h2>
             <div class="timeline">
+                <!-- Add this as the first timeline-item in your experience section -->
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content" data-company="youngminds">
+                        <h3 class="exp-title">Data Scientist</h3>
+                        <h4 class="exp-company">Young Minds Technology</h4>
+                        <span class="timeline-date">SEP 2025 – Present</span>
+                        <ul>
+                            <li>Developed and deployed Machine Learning, Deep Learning, and Generative AI models for
+                                real-world
+                                applications.</li>
+                            <li>Implemented ML pipelines and managed model deployment using Flask, react js, django and
+                                Streamlit.</li>
+                            <li>Optimized deep learning models to reduce inference time without compromising accuracy.
+                            </li>
+                            <li>Collaborated with cross-functional teams to design and deliver AI-driven business
+                                process
+                                automation solutions.</li>
+                        </ul>
+                    </div>
+                </div>
+
+
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content" data-company="aispry">
                         <h3 class="exp-title">Data Science & AI Intern</h3>
                         <h4 class="exp-company">AiSPRY</h4>
-                        <span class="timeline-date">DEC 2024 – JUL 2025</span>
+                        <span class="timeline-date">DEC 2024 – AUG 2025</span>
                         <ul>
                             <li>Applying Data Science and AI methodologies to address real-world business challenges.
                             </li>
